# iffl

./: CMakeLists.txt  CMakeSettings.json  README.md
docs/: Doxyfile.in  IFFL.pptx  README.md
docs/html/: annotated.html  class_debug.html  classdetected__t.html  classdetector_3_01_default_00_01void__t_3_01_operation_3_01_arguments_1_1_1_1_1_1_4.html  classes.html  classflat__forward__list__buffer.html  classiffl_1_1compressed__pair-members.html  classiffl_1_1compressed__pair.html  classiffl_1_1compressed__pair_3_01_t1_00_01_t2_00_01false_01_4-members.html  classiffl_1_1compressed__pair_3_01_t1_00_01_t2_00_01false_01_4.html  classiffl_1_1debug__memory__resource-members.html  classiffl_1_1debug__memory__resource.html  classiffl_1_1flat__forward__list-members.html  classiffl_1_1flat__forward__list.html  classiffl_1_1flat__forward__list__iterator__t-members.html  classiffl_1_1flat__forward__list__iterator__t.html  classiffl_1_1flat__forward__list__ref-members.html  classiffl_1_1flat__forward__list__ref.html  classiffl_1_1input__buffer__memory__resource-members.html  classiffl_1_1input__buffer__memory__resource.html  classiffl_1_1scope__guard-members.html  classiffl_1_1scope__guard.html  classis__detected.html  classis__detected__t.html  classompressed__pair_3_01_t1_00_01_t2_00_01false_01_4.html  classscope__guald.html  classscoped__guald.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_53f71d9fb37a877151f2acfb29aab9d7.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_80183f324011e28b0c93cf52d16dc748.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d044145687c20dd5a81e9d4986b16677.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_da92606663f4ecb03aa66c183f15dac3.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  (+108 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_14.js  functions_2.js  (+42 more)
include/: iffl.h  iffl_allocator.h  iffl_common.h  iffl_config.h  iffl_list.h  iffl_mpl.h
test/: iffl_c_api_usecase.cpp  iffl_c_api_usecase.h  iffl_c_api_usecase1.cpp  iffl_c_api_usecase1.h  iffl_c_api_usecase2.cpp  iffl_c_api_usecase2.h  iffl_ea.h  iffl_ea_usecase.cpp  iffl_ea_usecase.h  iffl_list_array.h  iffl_test.cpp  iffl_test_cases.cpp  iffl_test_cases.h  iffl_unaligned.cpp  iffl_unaligned.h  iffl_views.cpp  iffl_views.h
